--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "ganety-server",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "edtech_platform_server",
+  "version": "0.1.0",
+  "description": "Online Course Platform",
+  "keywords": [
+    "Course",
+    "EdTech",
+    "Classes",
+    "Tutions"
+  ],
+  "author": "Darshan Chobarkar",
+  "email": "dchobarkar@gmail.com",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -26,11 +31,13 @@
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.0.0",
     "aws-sdk": "^2.656.0",
     "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
+    "config": "^3.3.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.18.2",
